--- a/AWS/foundational-services/iam.cfn/cloudformation/iam-user.yml
+++ b/AWS/foundational-services/iam.cfn/cloudformation/iam-user.yml
@@ -17,6 +17,8 @@ Resources:
         Password: myP@ssW0rd
       UserName: tonyo
 
+# new entry      
+
 #Outputs:
 #  User2Info:
 #    Description: Properties of User2 to be made available to other stacks
