--- a/AWS/foundational-services/iam.cfn/stack-conf.yaml
+++ b/AWS/foundational-services/iam.cfn/stack-conf.yaml
@@ -2,6 +2,10 @@ sys_path: ./
 namespace: ${customer}
 stacker_bucket: ''
 
+ package_sources:
+  local:
+    - source: ../iam.cfn
+
 stacks:
   - name: iam-users
     template_path: cloudformation/iam-user.yml
