aded ec2 Instance

--- a/AWS/foundational-services/ec2.cfn/vpc-stack.yaml
+++ b/AWS/foundational-services/ec2.cfn/vpc-stack.yaml
@@ -4,6 +4,6 @@ stacker_bucket: ''
 
 stacks:
   - name: base-vpc
-    template_path: cloudformation/network.yml
+    template_path: cloudformation/instance1.yml
     enabled: true
     
