--- a/AWS/foundational-services/iam.cfn/cloudformation/iam-user.yml
+++ b/AWS/foundational-services/iam.cfn/cloudformation/iam-user.yml
@@ -15,7 +15,7 @@ Resources:
       Path: "/"
       LoginProfile:
         Password: myP@ssW0rd
-      UserName: tonyo
+      UserName: tonyo1
 
 
 # new entry
