--- a/AWS/foundational-services/vpc.cfn/cloudformation/testvpc.yml
+++ b/AWS/foundational-services/vpc.cfn/cloudformation/testvpc.yml
@@ -1,10 +1,15 @@
-myVPC:
+AWSTemplateFormatVersion: '2010-09-09'
+Description: 'AWS CloudFormation Template - creates users for the environment'
+
+Resources:
+  myVPC:
   Type: AWS::EC2::VPC
   Properties:
     CidrBlock: 10.0.0.0/16
     EnableDnsSupport: 'false'
     EnableDnsHostnames: 'false'
-#    InstanceTenancy: dedicated
+  #    InstanceTenancy: dedicated
     Tags:
-     - Key: foo
-       Value: bar
+      - Key: foo
+        Value: bar
+        
