--- a/AWS/foundational-services/iam.cfn/cloudformation/iam-user.yml
+++ b/AWS/foundational-services/iam.cfn/cloudformation/iam-user.yml
@@ -16,6 +16,13 @@ Resources:
       LoginProfile:
         Password: myP@ssW0rd
       UserName: tonyk
+  user3:
+    Type: AWS::IAM::User
+    Properties:
+      Path: "/"
+      LoginProfile:
+        Password: myP@ssW0rd
+      UserName: nickt
 
 # new entry
 # new entry
