--- a/AWS/foundational-services/iam.cfn/cloudformation/iam-user.yml
+++ b/AWS/foundational-services/iam.cfn/cloudformation/iam-user.yml
@@ -6,23 +6,12 @@ Resources:
     Type: AWS::IAM::User
     Properties:
       Path: "/"
-      LoginProfile:
-        Password: myP@ssW0rd
       UserName: johnf
   user2:
     Type: AWS::IAM::User
     Properties:
       Path: "/"
-      LoginProfile:
-        Password: myP@ssW0rd
-      UserName: tonyk
-  user3:
-    Type: AWS::IAM::User
-    Properties:
-      Path: "/"
-      LoginProfile:
-        Password: myP@ssW0rd
-      UserName: nickt
+      UserName: tonyo
 
 # new entry
 # new entry
