--- a/AWS/foundational-services/vpc.cfn/vpc-stack.yaml
+++ b/AWS/foundational-services/vpc.cfn/vpc-stack.yaml
@@ -6,5 +6,4 @@ stacks:
   - name: base-vpc
     template_path: cloudformation/testvpc.yml
     enabled: true
-    profile: jblab
-    
+#    profile: jblab
