--- a/AWS/foundational-services/runway.yml
+++ b/AWS/foundational-services/runway.yml
@@ -10,4 +10,4 @@ deployments:
     jbest: 981576698432    #prod
     onlab: 504727362876    #test
     solab: 901570546523    #
-
+ignore_git_branch: true
