--- a/AWS/foundational-services/runway.yml
+++ b/AWS/foundational-services/runway.yml
@@ -6,8 +6,8 @@ deployments:
     regions:
       - us-east-1
     account-id:
-    default: 299605348825   #shared
-    jbest: 981576698432    #prod
-    onlab: 504727362876    #test
-    solab: 901570546523    #
+      default: 299605348825   #shared
+      jblab: 981576698432    #prod
+      onlab: 504727362876    #test
+      solab: 901570546523    #
 ignore_git_branch: true
