--- a/AWS/foundational-services/iam.cfn/iam-stack.yaml
+++ b/AWS/foundational-services/iam.cfn/iam-stack.yaml
@@ -6,5 +6,5 @@ stacks:
   - name: iam-users
     template_path: cloudformation/iam-user.yml
     enabled: true
-    profile: jblab
+    profile: ${profilename}
     
