--- a/AWS/foundational-services/vpc.cfn/cloudformation/network.yml
+++ b/AWS/foundational-services/vpc.cfn/cloudformation/network.yml
@@ -45,7 +45,7 @@ Resources:
       CidrBlock: !Ref VPCCIDR
       Tags:
         - Key: Name
-          Value: Core-vpc
+          Value: fccab-vpc
   InternetGateway:
     Type: 'AWS::EC2::InternetGateway'
     Properties:
