--- a/AWS/foundational-services/vpc.cfn/jblab.env
+++ b/AWS/foundational-services/vpc.cfn/jblab.env
@@ -1,2 +1,7 @@
 customer: corp
 profilename: jblab
+VPCCIDR: 10.3.0.0/16
+PublicSubnet1CIDR: 10.3.1.0/24
+PublicSubnet2CIDR: 10.3.2.0/24
+PrivateSubnet1CIDR: 10.3.3.0/24
+PrivateSubnet2CIDR: 10.3.4.0/24
